# py-workspace

./: README.md  mapper.py  market_analysis.py
resolution/fetch_image/: fetch_project_website.py  manage.py  manager.py  mapper.py  parser.py  subcommand.py
resolution/fetch_image/sql/: fetch_image.sql
resolution/set_up_templates/: .bumpversion.cfg  .dockerignore  .env_template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
resolution/translation/: manage.py  manager.py  subcommand.py
translation/: chinese_converter.sql  manage.py
